Actually added chapter 2 footnote content

--- a/content/writing/thesis.html
+++ b/content/writing/thesis.html
@@ -25,7 +25,6 @@
           <a href="../portfolio/portfolio.html">Web</a>
         </div>
       </div>
-
       <div class="article">
         <div id="thesis">
           <div id="titlePage">
@@ -216,6 +215,92 @@
           <li id="footnote23" class="footnote hidden">23. Martin Heidegger, <em>Being and Time</em>, trans. John Macquarrie and Edward Robinson (New York: Harper & Row, 1962), 160.</li>
           <li id="footnote24" class="footnote hidden">24. Martin Heidegger, <em>Being and Time</em>, trans. John Macquarrie and Edward Robinson (New York: Harper & Row, 1962), 161.</li>
           <li id="footnote25" class="footnote hidden">25. Pierre Livet, “Mitsein et intersubjectivité”, in « <em>Être et temps » de Martin Heidegger : Questions de méthode et voies de recherche</em>, ed. Jean-Pierre Cometti and Dominique Janicaud (Marseille: Sud, 1989), 159. “…le Mitsein est seulement ce qui fait de mon monde un monde commun, donc qui fait des êtres de ce monde des êtres partagés. Mais il ne définit nullement le rapport spécifique à l’autre”. Translation my own.</li>
+          <li id="footnote26" class="footnote hidden">26. Cecil L. Eubanks and David J. Gauthier, “The Politics of the Homeless Spirit: Heidegger and Levinas on Dwelling and Hospitality”, <em>History of Political Thought<em></em> 32, no. 1 (2011): 127.</li>
+          <li id="footnote27" class="footnote hidden">27. Cecil L. Eubanks and David J. Gauthier, “The Politics of the Homeless Spirit: Heidegger and Levinas on Dwelling and Hospitality”, <em>History of Political Thought<em></em> 32, no. 1 (2011): 136.</li>
+          <li id="footnote28" class="footnote hidden">28. Emmanuel Levinas, <em>Totality and Infinity</em>, trans. Alphonso Lingis (Pennsylvania: Duquesne University Press, 1969): 33.</li>
+          <li id="footnote29" class="footnote hidden">29. Emmanuel Levinas, <em>Totality and Infinity</em>, trans. Alphonso Lingis (Pennsylvania: Duquesne University Press, 1969): 37. As we have seen (Chapter 1), this notion is also found in Heidegger and it will be critically important to remember how this relationship between Dasein and the world functions in order to understand the severity of Levinas’s point here.</li>
+          <li id="footnote30" class="footnote hidden">30. Emmanuel Levinas, <em>Totality and Infinity</em>, trans. Alphonso Lingis (Pennsylvania: Duquesne University Press, 1969): 37.</li>
+          <li id="footnote31" class="footnote hidden">31. Emmanuel Levinas, <em>Totality and Infinity</em>, trans. Alphonso Lingis (Pennsylvania: Duquesne University Press, 1969): 37.</li>
+          <li id="footnote32" class="footnote hidden">32. Emmanuel Levinas, <em>Totality and Infinity</em>, trans. Alphonso Lingis (Pennsylvania: Duquesne University Press, 1969): 37. The careful reader might take pause here when they read that this “being at home” is dependent upon a reality that is other. This will be addressed in the following section where the relationship with the Other will be explored.</li>
+          <li id="footnote33" class="footnote hidden">33. Emmanuel Levinas, <em>Totality and Infinity</em>, trans. Alphonso Lingis (Pennsylvania: Duquesne University Press, 1969): 37–38. This phrase uses a play on words in the French where the word for “comprehended” contains “pris” which is the past participle for “take”.</li>
+          <li id="footnote34" class="footnote hidden">34. Emmanuel Levinas, <em>Totality and Infinity</em>, trans. Alphonso Lingis (Pennsylvania: Duquesne University Press, 1969): 38.</li>
+          <li id="footnote35" class="footnote hidden">35. Emmanuel Levinas, <em>Totality and Infinity</em>, trans. Alphonso Lingis (Pennsylvania: Duquesne University Press, 1969): 38.</li>
+          <li id="footnote36" class="footnote hidden">36. Emmanuel Levinas, <em>Totality and Infinity</em>, trans. Alphonso Lingis (Pennsylvania: Duquesne University Press, 1969): 39.</li>
+          <li id="footnote37" class="footnote hidden">37. Emmanuel Levinas, <em>Totality and Infinity</em>, trans. Alphonso Lingis (Pennsylvania: Duquesne University Press, 1969): 39</li>
+          <li id="footnote38" class="footnote hidden">38. Emmanuel Levinas, <em>Entre Nous</em>, trans. Michael B. Smith and Barbara Harshav (New York: Columbia University Press, 1998): 6.</li>
+          <li id="footnote39" class="footnote hidden">39. Emmanuel Levinas, <em>Entre Nous</em>, trans. Michael B. Smith and Barbara Harshav (New York: Columbia University Press, 1998): 6.</li>
+          <li id="footnote40" class="footnote hidden">40. Emmanuel Levinas, <em>Entre Nous</em>, trans. Michael B. Smith and Barbara Harshav (New York: Columbia University Press, 1998): 7.</li>
+          <li id="footnote41" class="footnote hidden">41. Emmanuel Levinas, <em>Totality and Infinity</em>, trans. Alphonso Lingis (Pennsylvania: Duquesne University Press, 1969): 39.</li>
+          <li id="footnote42" class="footnote hidden">42. Emmanuel Levinas, <em>Totality and Infinity</em>, trans. Alphonso Lingis (Pennsylvania: Duquesne University Press, 1969): 39.</li>
+          <li id="footnote43" class="footnote hidden">43. Emmanuel Levinas, <em>Totality and Infinity</em>, trans. Alphonso Lingis (Pennsylvania: Duquesne University Press, 1969): 194.</li>
+          <li id="footnote44" class="footnote hidden">44. Emmanuel Levinas, <em>Éthique et infini</em> (Paris: Le Livre de Poche, 1984), 79. “…parler de « phénoménologie » du visage, puisque la phénoménologie décrit ce qui apparaît.” Translation my own.</li>
+          <li id="footnote45" class="footnote hidden">45. Emmanuel Levinas, <em>Totality and Infinity</em>, trans. Alphonso Lingis (Pennsylvania: Duquesne University Press, 1969): 50.</li>
+          <li id="footnote46" class="footnote hidden">46. Emmanuel Levinas, and Philippe Nemo, <em>Ethics and Infinity: Conversations with Philippe Nemo</em>, trans. Richard A. Cohen (Pennsylvania: Duquesne University Press, 2011): 87.</li>
+          <li id="footnote47" class="footnote hidden">47. Emmanuel Levinas, and Philippe Nemo, <em>Ethics and Infinity: Conversations with Philippe Nemo</em>, trans. Richard A. Cohen (Pennsylvania: Duquesne University Press, 2011): 89.</li>
+          <li id="footnote48" class="footnote hidden">48. Emmanuel Levinas, and Philippe Nemo, <em>Ethics and Infinity: Conversations with Philippe Nemo</em>, trans. Richard A. Cohen (Pennsylvania: Duquesne University Press, 2011): 86–87.</li>
+          <li id="footnote49" class="footnote hidden">49. Emmanuel Levinas, and Philippe Nemo, <em>Ethics and Infinity: Conversations with Philippe Nemo</em>, trans. Richard A. Cohen (Pennsylvania: Duquesne University Press, 2011): 86.</li>
+          <li id="footnote50" class="footnote hidden">50. This is not something that Levinas would agree with since he is trying to break from Heidegger’s ontology, but I think it is possible to think of others as other beings ontologically similar to myself, but I address why we perhaps shouldn’t break from ontology completely in the third chapter.</li>
+          <li id="footnote51" class="footnote hidden">51. Emmanuel Levinas, <em>Totality and Infinity</em>, trans. Alphonso Lingis (Pennsylvania: Duquesne University Press, 1969): 195.</li>
+          <li id="footnote52" class="footnote hidden">52. Emmanuel Levinas, and Philippe Nemo, <em>Ethics and Infinity: Conversations with Philippe Nemo</em>, trans. Richard A. Cohen (Pennsylvania: Duquesne University Press, 2011): 88.</li>
+          <li id="footnote53" class="footnote hidden">53. Emmanuel Levinas, and Philippe Nemo, <em>Ethics and Infinity: Conversations with Philippe Nemo</em>, trans. Richard A. Cohen (Pennsylvania: Duquesne University Press, 2011): 89.</li>
+          <li id="footnote54" class="footnote hidden">54. Jacques Derrida, <em>Adieu to Emmanuel Levinas</em>, trans. Pascale-Anne Brault and Michael Naas (Stanford: Stanford University Press, 1999): 92.</li>
+          <li id="footnote55" class="footnote hidden">55. Emmanuel Levinas, and Philippe Nemo, <em>Ethics and Infinity: Conversations with Philippe Nemo</em>, trans. Richard A. Cohen (Pennsylvania: Duquesne University Press, 2011): 95.</li>
+          <li id="footnote56" class="footnote hidden"></li>
+          <li id="footnote57" class="footnote hidden"></li>
+          <li id="footnote58" class="footnote hidden"></li>
+          <li id="footnote59" class="footnote hidden"></li>
+          <li id="footnote60" class="footnote hidden"></li>
+          <li id="footnote61" class="footnote hidden"></li>
+          <li id="footnote62" class="footnote hidden"></li>
+          <li id="footnote63" class="footnote hidden"></li>
+          <li id="footnote64" class="footnote hidden"></li>
+          <li id="footnote65" class="footnote hidden"></li>
+          <li id="footnote66" class="footnote hidden"></li>
+          <li id="footnote67" class="footnote hidden"></li>
+          <li id="footnote68" class="footnote hidden"></li>
+          <li id="footnote69" class="footnote hidden"></li>
+          <li id="footnote70" class="footnote hidden"></li>
+          <li id="footnote71" class="footnote hidden"></li>
+          <li id="footnote72" class="footnote hidden"></li>
+          <li id="footnote73" class="footnote hidden"></li>
+          <li id="footnote74" class="footnote hidden"></li>
+          <li id="footnote75" class="footnote hidden"></li>
+          <li id="footnote76" class="footnote hidden"></li>
+          <li id="footnote77" class="footnote hidden"></li>
+          <li id="footnote78" class="footnote hidden"></li>
+          <li id="footnote79" class="footnote hidden"></li>
+          <li id="footnote80" class="footnote hidden"></li>
+          <li id="footnote81" class="footnote hidden"></li>
+          <li id="footnote82" class="footnote hidden"></li>
+          <li id="footnote83" class="footnote hidden"></li>
+          <li id="footnote84" class="footnote hidden"></li>
+          <li id="footnote85" class="footnote hidden"></li>
+          <li id="footnote86" class="footnote hidden"></li>
+          <li id="footnote87" class="footnote hidden"></li>
+          <li id="footnote88" class="footnote hidden"></li>
+          <li id="footnote89" class="footnote hidden"></li>
+          <li id="footnote90" class="footnote hidden"></li>
+          <li id="footnote91" class="footnote hidden"></li>
+          <li id="footnote92" class="footnote hidden"></li>
+          <li id="footnote93" class="footnote hidden"></li>
+          <li id="footnote94" class="footnote hidden"></li>
+          <li id="footnote95" class="footnote hidden"></li>
+          <li id="footnote96" class="footnote hidden"></li>
+          <li id="footnote97" class="footnote hidden"></li>
+          <li id="footnote98" class="footnote hidden"></li>
+          <li id="footnote99" class="footnote hidden"></li>
+          <li id="footnote100" class="footnote hidden"></li>
+          <li id="footnote101" class="footnote hidden"></li>
+          <li id="footnote102" class="footnote hidden"></li>
+          <li id="footnote103" class="footnote hidden"></li>
+          <li id="footnote104" class="footnote hidden"></li>
+          <li id="footnote105" class="footnote hidden"></li>
+          <li id="footnote106" class="footnote hidden"></li>
+          <li id="footnote107" class="footnote hidden"></li>
+          <li id="footnote108" class="footnote hidden"></li>
+          <li id="footnote109" class="footnote hidden"></li>
+          <li id="footnote110" class="footnote hidden"></li>
+          <li id="footnote111" class="footnote hidden"></li>
         </ol>
         <button class="close"><img class="icon" src="../../static/images/icons/x.svg" alt="close"></button>
       </div>
