--- a/content/writing/thesis.html
+++ b/content/writing/thesis.html
@@ -215,8 +215,8 @@
           <li id="footnote23" class="footnote hidden">23. Martin Heidegger, <em>Being and Time</em>, trans. John Macquarrie and Edward Robinson (New York: Harper & Row, 1962), 160.</li>
           <li id="footnote24" class="footnote hidden">24. Martin Heidegger, <em>Being and Time</em>, trans. John Macquarrie and Edward Robinson (New York: Harper & Row, 1962), 161.</li>
           <li id="footnote25" class="footnote hidden">25. Pierre Livet, “Mitsein et intersubjectivité”, in « <em>Être et temps » de Martin Heidegger : Questions de méthode et voies de recherche</em>, ed. Jean-Pierre Cometti and Dominique Janicaud (Marseille: Sud, 1989), 159. “…le Mitsein est seulement ce qui fait de mon monde un monde commun, donc qui fait des êtres de ce monde des êtres partagés. Mais il ne définit nullement le rapport spécifique à l’autre”. Translation my own.</li>
-          <li id="footnote26" class="footnote hidden">26. Cecil L. Eubanks and David J. Gauthier, “The Politics of the Homeless Spirit: Heidegger and Levinas on Dwelling and Hospitality”, <em>History of Political Thought<em></em> 32, no. 1 (2011): 127.</li>
-          <li id="footnote27" class="footnote hidden">27. Cecil L. Eubanks and David J. Gauthier, “The Politics of the Homeless Spirit: Heidegger and Levinas on Dwelling and Hospitality”, <em>History of Political Thought<em></em> 32, no. 1 (2011): 136.</li>
+          <li id="footnote26" class="footnote hidden">26. Cecil L. Eubanks and David J. Gauthier, “The Politics of the Homeless Spirit: Heidegger and Levinas on Dwelling and Hospitality”, <em>History of Political Thought</em> 32, no. 1 (2011): 127.</li>
+          <li id="footnote27" class="footnote hidden">27. Cecil L. Eubanks and David J. Gauthier, “The Politics of the Homeless Spirit: Heidegger and Levinas on Dwelling and Hospitality”, <em>History of Political Thought</em> 32, no. 1 (2011): 136.</li>
           <li id="footnote28" class="footnote hidden">28. Emmanuel Levinas, <em>Totality and Infinity</em>, trans. Alphonso Lingis (Pennsylvania: Duquesne University Press, 1969): 33.</li>
           <li id="footnote29" class="footnote hidden">29. Emmanuel Levinas, <em>Totality and Infinity</em>, trans. Alphonso Lingis (Pennsylvania: Duquesne University Press, 1969): 37. As we have seen (Chapter 1), this notion is also found in Heidegger and it will be critically important to remember how this relationship between Dasein and the world functions in order to understand the severity of Levinas’s point here.</li>
           <li id="footnote30" class="footnote hidden">30. Emmanuel Levinas, <em>Totality and Infinity</em>, trans. Alphonso Lingis (Pennsylvania: Duquesne University Press, 1969): 37.</li>
@@ -245,19 +245,19 @@
           <li id="footnote53" class="footnote hidden">53. Emmanuel Levinas, and Philippe Nemo, <em>Ethics and Infinity: Conversations with Philippe Nemo</em>, trans. Richard A. Cohen (Pennsylvania: Duquesne University Press, 2011): 89.</li>
           <li id="footnote54" class="footnote hidden">54. Jacques Derrida, <em>Adieu to Emmanuel Levinas</em>, trans. Pascale-Anne Brault and Michael Naas (Stanford: Stanford University Press, 1999): 92.</li>
           <li id="footnote55" class="footnote hidden">55. Emmanuel Levinas, and Philippe Nemo, <em>Ethics and Infinity: Conversations with Philippe Nemo</em>, trans. Richard A. Cohen (Pennsylvania: Duquesne University Press, 2011): 95.</li>
-          <li id="footnote56" class="footnote hidden"></li>
-          <li id="footnote57" class="footnote hidden"></li>
-          <li id="footnote58" class="footnote hidden"></li>
-          <li id="footnote59" class="footnote hidden"></li>
-          <li id="footnote60" class="footnote hidden"></li>
-          <li id="footnote61" class="footnote hidden"></li>
-          <li id="footnote62" class="footnote hidden"></li>
-          <li id="footnote63" class="footnote hidden"></li>
-          <li id="footnote64" class="footnote hidden"></li>
-          <li id="footnote65" class="footnote hidden"></li>
-          <li id="footnote66" class="footnote hidden"></li>
-          <li id="footnote67" class="footnote hidden"></li>
-          <li id="footnote68" class="footnote hidden"></li>
+          <li id="footnote56" class="footnote hidden">56. </li>
+          <li id="footnote57" class="footnote hidden">57.</li>
+          <li id="footnote58" class="footnote hidden">58.</li>
+          <li id="footnote59" class="footnote hidden">59.</li>
+          <li id="footnote60" class="footnote hidden">60.</li>
+          <li id="footnote61" class="footnote hidden">61.</li>
+          <li id="footnote62" class="footnote hidden">62.</li>
+          <li id="footnote63" class="footnote hidden">63.</li>
+          <li id="footnote64" class="footnote hidden">64.</li>
+          <li id="footnote65" class="footnote hidden">65.</li>
+          <li id="footnote66" class="footnote hidden">66.</li>
+          <li id="footnote67" class="footnote hidden">67.</li>
+          <li id="footnote68" class="footnote hidden">68.</li>
           <li id="footnote69" class="footnote hidden"></li>
           <li id="footnote70" class="footnote hidden"></li>
           <li id="footnote71" class="footnote hidden"></li>
