Finished adding citations for thesis.
Now this page has all the content that it needs.

--- a/content/writing/thesis.html
+++ b/content/writing/thesis.html
@@ -245,62 +245,62 @@
           <li id="footnote53" class="footnote hidden">53. Emmanuel Levinas, and Philippe Nemo, <em>Ethics and Infinity: Conversations with Philippe Nemo</em>, trans. Richard A. Cohen (Pennsylvania: Duquesne University Press, 2011): 89.</li>
           <li id="footnote54" class="footnote hidden">54. Jacques Derrida, <em>Adieu to Emmanuel Levinas</em>, trans. Pascale-Anne Brault and Michael Naas (Stanford: Stanford University Press, 1999): 92.</li>
           <li id="footnote55" class="footnote hidden">55. Emmanuel Levinas, and Philippe Nemo, <em>Ethics and Infinity: Conversations with Philippe Nemo</em>, trans. Richard A. Cohen (Pennsylvania: Duquesne University Press, 2011): 95.</li>
-          <li id="footnote56" class="footnote hidden">56. </li>
-          <li id="footnote57" class="footnote hidden">57.</li>
-          <li id="footnote58" class="footnote hidden">58.</li>
-          <li id="footnote59" class="footnote hidden">59.</li>
-          <li id="footnote60" class="footnote hidden">60.</li>
-          <li id="footnote61" class="footnote hidden">61.</li>
-          <li id="footnote62" class="footnote hidden">62.</li>
-          <li id="footnote63" class="footnote hidden">63.</li>
-          <li id="footnote64" class="footnote hidden">64.</li>
-          <li id="footnote65" class="footnote hidden">65.</li>
-          <li id="footnote66" class="footnote hidden">66.</li>
-          <li id="footnote67" class="footnote hidden">67.</li>
-          <li id="footnote68" class="footnote hidden">68.</li>
-          <li id="footnote69" class="footnote hidden"></li>
-          <li id="footnote70" class="footnote hidden"></li>
-          <li id="footnote71" class="footnote hidden"></li>
-          <li id="footnote72" class="footnote hidden"></li>
-          <li id="footnote73" class="footnote hidden"></li>
-          <li id="footnote74" class="footnote hidden"></li>
-          <li id="footnote75" class="footnote hidden"></li>
-          <li id="footnote76" class="footnote hidden"></li>
-          <li id="footnote77" class="footnote hidden"></li>
-          <li id="footnote78" class="footnote hidden"></li>
-          <li id="footnote79" class="footnote hidden"></li>
-          <li id="footnote80" class="footnote hidden"></li>
-          <li id="footnote81" class="footnote hidden"></li>
-          <li id="footnote82" class="footnote hidden"></li>
-          <li id="footnote83" class="footnote hidden"></li>
-          <li id="footnote84" class="footnote hidden"></li>
-          <li id="footnote85" class="footnote hidden"></li>
-          <li id="footnote86" class="footnote hidden"></li>
-          <li id="footnote87" class="footnote hidden"></li>
-          <li id="footnote88" class="footnote hidden"></li>
-          <li id="footnote89" class="footnote hidden"></li>
-          <li id="footnote90" class="footnote hidden"></li>
-          <li id="footnote91" class="footnote hidden"></li>
-          <li id="footnote92" class="footnote hidden"></li>
-          <li id="footnote93" class="footnote hidden"></li>
-          <li id="footnote94" class="footnote hidden"></li>
-          <li id="footnote95" class="footnote hidden"></li>
-          <li id="footnote96" class="footnote hidden"></li>
-          <li id="footnote97" class="footnote hidden"></li>
-          <li id="footnote98" class="footnote hidden"></li>
-          <li id="footnote99" class="footnote hidden"></li>
-          <li id="footnote100" class="footnote hidden"></li>
-          <li id="footnote101" class="footnote hidden"></li>
-          <li id="footnote102" class="footnote hidden"></li>
-          <li id="footnote103" class="footnote hidden"></li>
-          <li id="footnote104" class="footnote hidden"></li>
-          <li id="footnote105" class="footnote hidden"></li>
-          <li id="footnote106" class="footnote hidden"></li>
-          <li id="footnote107" class="footnote hidden"></li>
-          <li id="footnote108" class="footnote hidden"></li>
-          <li id="footnote109" class="footnote hidden"></li>
-          <li id="footnote110" class="footnote hidden"></li>
-          <li id="footnote111" class="footnote hidden"></li>
+          <li id="footnote56" class="footnote hidden">56. Emmanuel Levinas, <em>Totality and Infinity</em>, trans. Alphonso Lingis (Pennsylvania: Duquesne University Press, 1969): 213.</li>
+          <li id="footnote57" class="footnote hidden">57. Emmanuel Levinas, <em>Totality and Infinity</em>, trans. Alphonso Lingis (Pennsylvania: Duquesne University Press, 1969): 213.</li>
+          <li id="footnote58" class="footnote hidden">58. Colin Davis, <em>Levinas: An Introduction</em> (Indiana: Notre Dame Press, 2007): 52–53.</li>
+          <li id="footnote59" class="footnote hidden">59. Colin Davis, <em>Levinas: An Introduction</em> (Indiana: Notre Dame Press, 2007): 82.</li>
+          <li id="footnote60" class="footnote hidden">60. Colin Davis, <em>Levinas: An Introduction</em> (Indiana: Notre Dame Press, 2007): 83.</li>
+          <li id="footnote61" class="footnote hidden">61. Colin Davis, <em>Levinas: An Introduction</em> (Indiana: Notre Dame Press, 2007): 83.</li>
+          <li id="footnote62" class="footnote hidden">62. Colin Davis, <em>Levinas: An Introduction</em> (Indiana: Notre Dame Press, 2007): 84.</li>
+          <li id="footnote63" class="footnote hidden">63. Emmanuel Levinas, and Philippe Nemo, <em>Ethics and Infinity: Conversations with Philippe Nemo</em>, trans. Richard A. Cohen (Pennsylvania: Duquesne University Press, 2011): 99.</li>
+          <li id="footnote64" class="footnote hidden">64. Emmanuel Levinas, and Philippe Nemo, <em>Ethics and Infinity: Conversations with Philippe Nemo</em>, trans. Richard A. Cohen (Pennsylvania: Duquesne University Press, 2011): 99.</li>
+          <li id="footnote65" class="footnote hidden">65. Cecil L. Eubanks and David J. Gauthier, “The Politics of the Homeless Spirit: Heidegger and Levinas on Dwelling and Hospitality”, <em>History of Political Thought</em> 32, no. 1 (2011): 145.</li>
+          <li id="footnote66" class="footnote hidden">66. François Raffoul, “Being and the Other: Ethics and Ontology in Levinas and Heidegger”, in <em>Addressing Levinas</em>, eds. Eric Sean Nelson, Antje Kapust, and Kent Still (Illinois: Northwestern University Press, 2005), 150.</li>
+          <li id="footnote67" class="footnote hidden">67. Emmanuel Levinas, <em>Otherwise than Being</em>, trans. Alphonso Lingis (Pennsylvania: Duquesne University Press, 1998): 79.</li>
+          <li id="footnote68" class="footnote hidden">68. Emmanuel Levinas, and Philippe Nemo, <em>Ethics and Infinity: Conversations with Philippe Nemo</em>, trans. Richard A. Cohen (Pennsylvania: Duquesne University Press, 2011): 86.</li>
+          <li id="footnote69" class="footnote hidden">69. Emmanuel Levinas, <em>Totality and Infinity</em>, trans. Alphonso Lingis (Pennsylvania: Duquesne University Press, 1969): 203.</li>
+          <li id="footnote70" class="footnote hidden">70. Emmanuel Levinas, <em>Totality and Infinity</em>, trans. Alphonso Lingis (Pennsylvania: Duquesne University Press, 1969): 219.</li>
+          <li id="footnote71" class="footnote hidden">71. Emmanuel Levinas, <em>Totality and Infinity</em>, trans. Alphonso Lingis (Pennsylvania: Duquesne University Press, 1969): 38. Here I have capitalized “Same” although it is not in this translation simply because it appears as “le Même” in <em>Totalité et infini</em>. I have taken the liberty of doing the same throughout.</li>
+          <li id="footnote72" class="footnote hidden">72. Jeffrey Bloechl, “Words of Welcome: Hospitality in the Philosophy of Emmanuel Levinas”, in <em>Phenomenologies of the Stranger: Between Hostility and Hospitality</em>, eds. Richard Kearney and Kascha Semonovitch (New York: Fordham University Press, 2011): 235.</li>
+          <li id="footnote73" class="footnote hidden">73. Jacques Derrida, <em>Adieu to Emmanuel Levinas</em>, trans. Pascale-Anne Brault and Michael Naas (Stanford: Stanford University Press, 1999): 21.</li>
+          <li id="footnote74" class="footnote hidden">74. François Raffoul, “The Subject of the Welcome: On Jacques Derrida’s Adieu à Emmanuel Levinas”, <em>Symposium</em> 2, no. 2 (1998): 213.</li>
+          <li id="footnote75" class="footnote hidden">75. Jacques Derrida, <em>Adieu to Emmanuel Levinas</em>, trans. Pascale-Anne Brault and Michael Naas (Stanford: Stanford University Press, 1999): 21.</li>
+          <li id="footnote76" class="footnote hidden">76. Jacques Derrida, “Hospitality, Justice and Responsibility: a Dialogue with Jacques Derrida”, <em>Questioning Ethics Contemporary Debates in Philosophy</em>, eds. Richard Kearney and Mark Dooley (London: Routledge, 1999): 69.</li>
+          <li id="footnote77" class="footnote hidden">77. Jacques Derrida, “Hospitality, Justice and Responsibility: a Dialogue with Jacques Derrida”, <em>Questioning Ethics Contemporary Debates in Philosophy</em>, eds. Richard Kearney and Mark Dooley (London: Routledge, 1999): 69.</li>
+          <li id="footnote78" class="footnote hidden">78. Emmanuel Levinas, <em>Totality and Infinity</em>, trans. Alphonso Lingis (Pennsylvania: Duquesne University Press, 1969): 203.</li>
+          <li id="footnote79" class="footnote hidden">79. Jacques Derrida, “Hospitality, Justice and Responsibility: a Dialogue with Jacques Derrida”, <em>Questioning Ethics Contemporary Debates in Philosophy</em>, eds. Richard Kearney and Mark Dooley (London: Routledge, 1999): 69–70.</li>
+          <li id="footnote80" class="footnote hidden">80. Jacques Derrida, “Hospitality, Justice and Responsibility: a Dialogue with Jacques Derrida”, <em>Questioning Ethics Contemporary Debates in Philosophy</em>, eds. Richard Kearney and Mark Dooley (London: Routledge, 1999): 70.</li>
+          <li id="footnote81" class="footnote hidden">81. Jacques Derrida, “Hospitality, Justice and Responsibility: a Dialogue with Jacques Derrida”, <em>Questioning Ethics Contemporary Debates in Philosophy</em>, eds. Richard Kearney and Mark Dooley (London: Routledge, 1999): 71.</li>
+          <li id="footnote82" class="footnote hidden">82. François Raffoul, “The Subject of the Welcome: On Jacques Derrida’s Adieu à Emmanuel Levinas”, Symposium 2, no. 2 (1998): 213.</li>
+          <li id="footnote83" class="footnote hidden">83. Richard Kearney and Kascha Semonovitch, “At the Threshold”, in <em>Phenomenologies of the Stranger: Between Hostility and Hospitality</em>, eds. Richard Kearney and Kascha Semonovitch (New York: Fordham University Press, 2011): 12.</li>
+          <li id="footnote84" class="footnote hidden">84. Richard Kearney and Kascha Semonovitch, “At the Threshold”, in <em>Phenomenologies of the Stranger: Between Hostility and Hospitality</em>, eds. Richard Kearney and Kascha Semonovitch (New York: Fordham University Press, 2011): 12.</li>
+          <li id="footnote85" class="footnote hidden">85. Richard Kearney and Kascha Semonovitch, “At the Threshold”, in <em>Phenomenologies of the Stranger: Between Hostility and Hospitality</em>, eds. Richard Kearney and Kascha Semonovitch (New York: Fordham University Press, 2011): 12.</li>
+          <li id="footnote86" class="footnote hidden">86. Richard Kearney and Kascha Semonovitch, “At the Threshold”, in <em>Phenomenologies of the Stranger: Between Hostility and Hospitality</em>, eds. Richard Kearney and Kascha Semonovitch (New York: Fordham University Press, 2011): 12.</li>
+          <li id="footnote87" class="footnote hidden">87. Jacques Derrida, <em>Paper Machine</em>, trans. Rachel Bowlby (Stanford: Stanford University Press, 2005): 67.</li>
+          <li id="footnote88" class="footnote hidden">88. Jacques Derrida, <em>Paper Machine</em>, trans. Rachel Bowlby (Stanford: Stanford University Press, 2005): 67.</li>
+          <li id="footnote89" class="footnote hidden">89. Jacques Derrida, <em>Acts of Religion</em>, ed. Gil Anidjar (New York: Routledge, 2010): 358–359.</li>
+          <li id="footnote90" class="footnote hidden">90. Jacques Derrida, <em>Acts of Religion</em>, ed. Gil Anidjar (New York: Routledge, 2010): 359.</li>
+          <li id="footnote91" class="footnote hidden">91. Jacques Derrida, <em>Acts of Religion</em>, ed. Gil Anidjar (New York: Routledge, 2010): 363.</li>
+          <li id="footnote92" class="footnote hidden">92. Lisa Guenther, “Le Flair Animal: Levinas and the Possibility of Animal Friendship”, <em>PhaenEx</em> 2, no. 2 (2007): 235.</li>
+          <li id="footnote93" class="footnote hidden">93. Jacques Derrida, <em>The Animal That Therefore I Am</em>, ed. Marie-Louise Mallet (New York: Fordham University Press, 2010): 12.</li>
+          <li id="footnote94" class="footnote hidden">94. Lisa Guenther, “Le Flair Animal: Levinas and the Possibility of Animal Friendship”, <em>PhaenEx</em> 2, no. 2 (2007): 234.</li>
+          <li id="footnote95" class="footnote hidden">95. Jacques Derrida, <em>The Animal That Therefore I Am</em>, ed. Marie-Louise Mallet (New York: Fordham University Press, 2010): 117.</li>
+          <li id="footnote96" class="footnote hidden">96. Jacques Derrida, <em>The Animal That Therefore I Am</em>, ed. Marie-Louise Mallet (New York: Fordham University Press, 2010): 142.</li>
+          <li id="footnote97" class="footnote hidden">97. Jacques Derrida, <em>Adieu to Emmanuel Levinas</em>, trans. Pascale-Anne Brault and Michael Naas (Stanford: Stanford University Press, 1999): 25.</li>
+          <li id="footnote98" class="footnote hidden">98. François Raffoul, “The Subject of the Welcome: On Jacques Derrida’s Adieu à Emmanuel Levinas”, <em>Symposium</em> 2, no. 2 (1998): 214.</li>
+          <li id="footnote99" class="footnote hidden">99. Jacques Derrida, <em>Adieu to Emmanuel Levinas</em>, trans. Pascale-Anne Brault and Michael Naas (Stanford: Stanford University Press, 1999): 25.</li>
+          <li id="footnote100" class="footnote hidden">100. Jacques Derrida, “A Certain Impossible Possibility of Saying the Event”, <em>Critical Inquiry</em> 33, no. 2 (2007): 441.</li>
+          <li id="footnote101" class="footnote hidden">101. Jacques Derrida, “A Certain Impossible Possibility of Saying the Event”, <em>Critical Inquiry</em> 33, no. 2 (2007): 441.</li>
+          <li id="footnote102" class="footnote hidden">102. Jacques Derrida, “A Certain Impossible Possibility of Saying the Event”, <em>Critical Inquiry</em> 33, no. 2 (2007): 443.</li>
+          <li id="footnote103" class="footnote hidden">103. Jacques Derrida, “A Certain Impossible Possibility of Saying the Event”, <em>Critical Inquiry</em> 33, no. 2 (2007): 446–467.</li>
+          <li id="footnote104" class="footnote hidden">104. Jacques Derrida, “A Certain Impossible Possibility of Saying the Event”, <em>Critical Inquiry</em> 33, no. 2 (2007): 447.</li>
+          <li id="footnote105" class="footnote hidden">105. Jacques Derrida, “A Certain Impossible Possibility of Saying the Event”, <em>Critical Inquiry</em> 33, no. 2 (2007): 451.</li>
+          <li id="footnote106" class="footnote hidden">106. Jacques Derrida, “A Certain Impossible Possibility of Saying the Event”, <em>Critical Inquiry</em> 33, no. 2 (2007): 451.</li>
+          <li id="footnote107" class="footnote hidden">107. Jacques Derrida, “A Certain Impossible Possibility of Saying the Event”, <em>Critical Inquiry</em> 33, no. 2 (2007): 451.</li>
+          <li id="footnote108" class="footnote hidden">108. Jacques Derrida, “A Certain Impossible Possibility of Saying the Event”, <em>Critical Inquiry</em> 33, no. 2 (2007): 452.</li>
+          <li id="footnote109" class="footnote hidden">109. François Raffoul, “Derrida and the Ethics of the Im-possible”, <em>Research in Phenomenology</em> 38, no. 2 (2008): 290.</li>
+          <li id="footnote110" class="footnote hidden">110. François Raffoul, <em>The Origins of Responsibility</em> (Indiana: Indiana University Press, 2010): 287.</li>
+          <li id="footnote111" class="footnote hidden">111. Emmanuel Levinas, <em>Totality and Infinity</em>, trans. Alphonso Lingis (Pennsylvania: Duquesne University Press, 1969): 50–51.</li>
         </ol>
         <button class="close"><img class="icon" src="../../static/images/icons/x.svg" alt="close"></button>
       </div>
